--- a/src/wig.html
+++ b/src/wig.html
@@ -83,14 +83,14 @@
       </div>
       <!-- Image 5 -->
       <div>
-        <img src="img/wig/wig-orange-court.webp" alt="Perruque rose" class="w-full">
+        <img src="img/wig/wig-orange-court.webp" alt="Perruque orange" class="w-full">
       </div>
       <!-- Image 6 -->
       <div>
-        <img src="img/wig/wig-pink-court.jpg" alt="Perruque rose" class="w-full">
+        <img src="img/wig/wig-pink-court.jpg" alt="Perruque rose" class="w-full h-96">
       </div>
       <div>
-        <img src="img/wig/wig-pink-longue.jpg" alt="Perruque rose" class="w-full">
+        <img src="img/wig/wig-pink-longue.jpg" alt="Perruque rose" class="w-full  h-1/2 object-cover object-top">
       </div>
       <div>
         <img src="img/wig/wig-blonde-longue.webp" alt="Perruque rose" class="w-full">
