--- a/src/footer.html
+++ b/src/footer.html
@@ -1,16 +1,35 @@
-<!-- footer.html -->
+
+<div id="footer">
+
+
 <footer class="flex flex-col items-center bg-zinc-50 text-center text-surface dark:bg-neutral-700 opacity-70 dark:text-white fixed bottom-0 w-full">
-  <!-- Divider to Separate Footer from Content -->
   <div class="border-t-2 border-gray-600 my-6"></div>
 
-  <!-- Social Media Icons -->
   <div class="container flex justify-center space-x-4 mb-6">
-    <a href="#!" class="text-lg hover:text-blue-500"><i class="fab fa-facebook"></i></a>
-    <a href="#!" class="text-lg hover:text-blue-400"><i class="fab fa-twitter"></i></a>
-    <a href="#!" class="text-lg hover:text-pink-500"><i class="fab fa-instagram"></i></a>
-    <a href="#!" class="text-lg hover:text-blue-700"><i class="fab fa-linkedin"></i></a>
+    <!-- Facebook -->
+    <a href="https://www.facebook.com/" class="text-lg hover:text-blue-500">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 320 512" class="h-5 w-5">
+        <path d="M80 299.3V512H196V299.3h86.5l18-97.8H196V166.9c0-51.7 20.3-71.5 72.7-71.5c16.3 0 29.4 .4 37 1.2V7.9C291.4 4 256.4 0 236.2 0C129.3 0 80 50.5 80 159.4v42.1H14v97.8H80z"/>
+      </svg>
+    </a>
+
+    <!-- X -->
+    <a href="https://x.com/" class="text-lg hover:text-blue-400">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 512 512" class="h-5 w-5">
+        <path d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z"/>
+      </svg>
+    </a>
+
+    <!-- Instagram -->
+    <a href="https://www.instagram.com/" class="text-lg hover:text-pink-500">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 448 512" class="h-5 w-5">
+        <path d="M224.1 141c-63.6 0-115.7 51.2-115.7 115.7S160.5 372.3 224.1 372.3s115.7-51.2 115.7-115.7-51.2-115.6-115.7-115.6zm0 186.1c-38.8 0-70.4-31.6-70.4-70.4s31.6-70.4 70.4-70.4c38.8 0 70.4 31.6 70.4 70.4s-31.6 70.4-70.4 70.4zm146.5-207.6c0 13.3-10.7 24-24 24-13.3 0-24-10.7-24-24 0-13.3 10.7-24 24-24 13.3 0 24 10.7 24 24zm76.4 24.3c-3.9-5.5-10.7-9.2-18.2-9.2h-40.3c-7.5 0-14.3 3.7-18.2 9.2-3.9 5.5-5.3 12.4-5.3 18.8v40.2c0 7.5 3.7 14.3 9.2 18.2 5.5 3.9 12.4 5.3 18.8 5.3h40.3c7.5 0 14.3-3.7 18.2-9.2 3.9-5.5 5.3-12.4 5.3-18.8v-40.2c0-7.5-3.7-14.3-9.2-18.2zm-39.5 59.2c0 41.1-33.4 74.5-74.5 74.5H116.4c-41.1 0-74.5-33.4-74.5-74.5V116.4c0-41.1 33.4-74.5 74.5-74.5h159.7c41.1 0 74.5 33.4 74.5 74.5v159.7zm74.5-159.7c0-77.3-62.9-140.2-140.2-140.2H140.1C62.9 0 0 62.9 0 140.2v159.7c0 77.3 62.9 140.2 140.2 140.2h159.7c77.3 0 140.2-62.9 140.2-140.2V140.2z"/>
+      </svg>
+    </a>
   </div>
 
-  <!-- Copyright -->
-  <p class="text-sm text-gray-400">&copy; 2023 TW Elements. All rights reserved.</p>
+  <p class="text-sm text-gray-400">&copy; 2024 Your cosplay</p>
 </footer>
+</div>
+</body>
+</html>
