--- a/src/header.html
+++ b/src/header.html
@@ -1,8 +1,15 @@
+<div id="header">
 <header class="fixed top-0 left-0 w-full dark:bg-neutral-700  opacity-70 z-10">
     <nav class="flex justify-center space-x-4 py-4 ">
-        <a href="index.html" class="font-medium px-3 py-2 text-white rounded-lg hover:bg-slate-100 hover:text-slate-900">Home</a>
-        <a href="wig.html" class="font-medium px-3 py-2 text-white rounded-lg hover:bg-slate-100 hover:text-slate-900">wig</a>
-        <a href="accessoir.html" class="font-medium px-3 py-2 text-white rounded-lg hover:bg-slate-100 hover:text-slate-900">accessoir</a>
-        <a href="/reports" class="font-medium px-3 py-2  text-white rounded-lg hover:bg-slate-100 hover:text-slate-900">Reports</a>
+        <a href="index.html" class="font-medium px-3 py-2 text-white rounded-lg hover:bg-slate-100 hover:text-slate-900">Accueil</a>
+        <a href="wig.html" class="font-medium px-3 py-2 text-white rounded-lg hover:bg-slate-100 hover:text-slate-900">Perruque</a>
+        <a href="accessoir.html" class="font-medium px-3 py-2 text-white rounded-lg hover:bg-slate-100 hover:text-slate-900">Accessoire</a>
+        <a href="hat.html" class="font-medium px-3 py-2  text-white rounded-lg hover:bg-slate-100 hover:text-slate-900">Chapeaux/Casques</a>
+        <a href="craft.html" class="font-medium px-3 py-2 text-white rounded-lg hover:bg-slate-100 hover:text-slate-900">Craft</a>
+        <a href="shows.html" class="font-medium px-3 py-2 text-white rounded-lg hover:bg-slate-100 hover:text-slate-900">Chaussures</a>
+        <a href="suit.html" class="font-medium px-3 py-2 text-white rounded-lg hover:bg-slate-100 hover:text-slate-900">Costumes</a>
+        <a href="" class="font-medium px-3 py-2 text-white rounded-lg hover:bg-slate-100 hover:text-slate-900">***</a>
+        <a href="makup.html" class="font-medium px-3 py-2 text-white rounded-lg hover:bg-slate-100 hover:text-slate-900">Maquillage</a>
     </nav>
 </header>
+</div>
