--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="./output.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.3.2/dist/tailwind.min.css" rel="stylesheet">
+  <!-- <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.3.2/dist/tailwind.min.css" rel="stylesheet"> -->
   <title>Index</title>
 </head>
 <body class="bg-gray-800 text-white">
@@ -36,13 +36,13 @@
   </main>
 
   <!-- Footer Section -->
-  <div id="footer"></div>
+  <footer id="footer"></footer>
 
   <!-- Font Awesome Icons -->
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
   <!-- External JavaScript File -->
   <script src="script.js"></script>
-
+  
 </body>
 </html>
