--- a/src/accessoir.html
+++ b/src/accessoir.html
@@ -8,6 +8,7 @@
 </head>
 <body class="bg-gray-800">
     <div id="header"></div>
+    <section class="h-[70px]"></section>
 <main class="flex">
 <!-- Section de filtrage -->
 <aside class="w-1/4 bg-gray-600 p-4 border-r border-gray-500">
@@ -55,13 +56,14 @@
   <!-- Section des images -->
 
   <section class="w-3/4 p-4">
-    <h1 class="text-3xl font-bold text-gray-700 mb-4 text-center">Collection d'accessoires</h1>
+    <h1 class="text-3xl font-bold text-white mb-4 text-center">Collection d'accessoires</h1>
     <div class="grid grid-cols-3 gap-4">
       <!-- Image 1 -->
       <div>
         
         <div>
             <img id="seconde-peau" src="img/accessoire/seconde-peau-noir.jpg" alt="Seconde Peau Rouge" class="w-full cursor-pointer h-[540px]">
+            <p class="text-white text-xl"> Prix :10€</p>
           </div>
           <!-- js pour l img seconde-peau -->
           <script>
@@ -79,22 +81,27 @@
       <!-- Image 2 -->
       <div>
         <img src="img/accessoire/acce (2).jpg" alt="binder de poitrine" class="w-full h-[540px] cursor-pointer">
+        <p class="text-white text-xl"> Prix :4€</p>
       </div>
       <!-- Image 3 -->
       <div>
         <img src="img/accessoire/acce (3).jpg" alt="short gaine" class="w-full h-[540px] cursor-pointer">
+        <p class="text-white text-xl"> Prix :7€</p>
       </div>
       <!-- Image 4 -->
       <div>
         <img src="img/accessoire/acce (4).jpg" alt="épaule plumes" class="w-full h-[540px] cursor-pointer">
+        <p class="text-white text-xl"> Prix :15€</p>
       </div>
       <!-- Image 5 -->
       <div>
         <img src="img/accessoire/acce (5).jpg" alt="Pointrine en silicone" class="w-full h-[540px] cursor-pointer">
+        <p class="text-white text-xl"> Prix :65€</p>
       </div>
       <!-- Image 6 -->
       <div>
         <img src="img/accessoire/torse.jpg" alt="Torse" class="w-full h-[540px] cursor-pointer">
+        <p class="text-white text-xl"> Prix :65€</p>
       </div>
     </div>
   </section>
