--- a/src/header.html
+++ b/src/header.html
@@ -1,3 +1,4 @@
+<!-- header.html -->
 <div id="header">
 <header class="fixed top-0 left-0 w-full dark:bg-neutral-700  opacity-70 z-10">
     <nav class="flex justify-center space-x-4 py-4 ">
@@ -8,8 +9,9 @@
         <a href="craft.html" class="font-medium px-3 py-2 text-white rounded-lg hover:bg-slate-100 hover:text-slate-900">Craft</a>
         <a href="shows.html" class="font-medium px-3 py-2 text-white rounded-lg hover:bg-slate-100 hover:text-slate-900">Chaussures</a>
         <a href="suit.html" class="font-medium px-3 py-2 text-white rounded-lg hover:bg-slate-100 hover:text-slate-900">Costumes</a>
-        <a href="" class="font-medium px-3 py-2 text-white rounded-lg hover:bg-slate-100 hover:text-slate-900">***</a>
+        <a href="livres.html" class="font-medium px-3 py-2 text-white rounded-lg hover:bg-slate-100 hover:text-slate-900">Livre</a>
         <a href="makup.html" class="font-medium px-3 py-2 text-white rounded-lg hover:bg-slate-100 hover:text-slate-900">Maquillage</a>
     </nav>
 </header>
 </div>
+
