--- a/src/shows.html
+++ b/src/shows.html
@@ -8,6 +8,7 @@
 </head>
 <body class="bg-gray-800">
     <div id="header"></div>
+    <section class="h-[70px]"></section>
 <main class="flex">
 <!-- Section de filtrage -->
 <aside class="w-1/4 bg-gray-600 p-4 border-r border-gray-500">
@@ -55,7 +56,7 @@
   <!-- Section des images -->
 
   <section class="w-3/4 p-4">
-    <h1 class="text-3xl font-bold text-gray-700 mb-4 text-center">Collection d'accessoires</h1>
+    <h1 class="text-3xl font-bold text-white mb-4 text-center">Collection d'accessoires</h1>
     <div class="grid grid-cols-3 gap-4">
       <!-- Image 1 -->
       <div>
