--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
   <!-- External JavaScript File -->
-  <script src="script.js"></script>
+  <script src="/src/js/script.js"></script>
   
 </body>
 </html>
