--- a/src/footer.html
+++ b/src/footer.html
@@ -28,7 +28,7 @@
     </a>
   </div>
 
-  <p class="text-sm text-gray-400">&copy; 2024 Your cosplay</p>
+  <p class="text-sm text-gray-400">&copy; 2024 Cosplay univers</p>
 </footer>
 </div>
 </body>
