--- a/src/suit.html
+++ b/src/suit.html
@@ -24,7 +24,7 @@
     <li>
       <label class="flex items-center space-x-2  text-white">
         <input type="checkbox" class="text-green-500 focus:ring-green-300" value="tenue-2-parties">
-        <span>Tenue 2 parties</span>
+        <span>Tenue 2 parties ou plus</span>
       </label>
     </li>
     <li>
@@ -48,7 +48,7 @@
     <h1 class="text-3xl font-bold text-white mb-4 text-center">Collection d'accessoires</h1>
     <div class="grid grid-cols-3 gap-4">
       <!-- Image 1 -->
-      <div>
+      <div class="item kimonos">
         
         <div><a href="article.html">
             <img src="img/tenue/tenue-b (1).jpg" alt="costume de Bleatch" class="w-full cursor-pointer h-[540px]"
