--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,12 @@
   <main>
     <!-- Main Image Banner -->
     <section class="w-full">
-      <img src="/src/img/fond.png" alt="Background Image" class="w-full  object-cover">
+      <img src="/img/fond.png" alt="Background Image" class="w-full  object-cover">
     </section>
 
     <!-- Section for Content -->
     <section id="reseau" class="my-8 flex justify-center gap-4 flex-wrap">
-      <img src="/src/img/taches.webp" alt="Example Image" class="w-full h-64 object-cover rounded-lg">
+      <img src="/src/img/fca63c08-129c-4e21-8a4b-66a5e5f01bb3.webp" alt="Example Image" class="w-full h-64 object-cover rounded-lg">
     </section>
 
     <!-- Promotion Section -->
