--- a/src/makup.html
+++ b/src/makup.html
@@ -92,8 +92,8 @@
 
  <!-- Footer Section -->
  <footer id="footer"></footer>
- <script src="/src/js/script.js"></script>
- <script src="/src/js/filtres.js"></script>
+ <script src="/js/script.js"></script>
+ <script src="/js/filtres.js"></script>
       
     </body>
     </html>
