--- a/src/cospromo.html
+++ b/src/cospromo.html
@@ -92,7 +92,8 @@
 
  <!-- Footer Section -->
  <footer id="footer"></footer>
- <script src="script.js"></script>
+ <script src="/js/script.js"></script>
+ <script src="/js/filtres.js"></script>
       
     </body>
     </html>
