--- a/src/index.html
+++ b/src/index.html
@@ -25,9 +25,9 @@
 
     <!-- Promotion Section -->
     <section id="promotion" class="grid grid-cols-3 gap-4 mb-8 sm:grid-cols-1 md:grid-cols-2">
-      <div><a href="cospromo.html"><img src="/src/img/cosplayreduc.webp" alt="Promo 1" class="rounded-lg w-full object-cover h-full"></a></div>
-      <div><a href="livres.html"><img src="/src/img/new.webp" alt="Promotion 50%" class="rounded-lg w-full object-cover h-full"></a></div>
-      <div><a href="craft.html"><img src="/src/img/promotion-50.webp" alt="50% Discount" class="rounded-lg w-full object-cover h-full"></a></div>
+      <div><a href="cospromo.html"><img src="img/cosplayreduc.webp" alt="Promo 1" class="rounded-lg w-full object-cover h-full"></a></div>
+      <div><a href="livres.html"><img src="img/new.webp" alt="Promotion 50%" class="rounded-lg w-full object-cover h-full"></a></div>
+      <div><a href="craft.html"><img src="img/promotion-50.webp" alt="50% Discount" class="rounded-lg w-full object-cover h-full"></a></div>
     </section>
 
     <!-- Extra Spacing for Clarity -->
