--- a/src/accessoir.html
+++ b/src/accessoir.html
@@ -98,7 +98,7 @@
   <footer id="footer"></footer>
 
   <!-- Scripts JS -->
-  <script src="/src/js/script.js"></script>
-  <script src="/src/js/filtres.js"></script>
+  <script src="/js/script.js"></script>
+  <script src="/js/filtres.js"></script>
 </body>
 </html>
