--- a/src/shows.html
+++ b/src/shows.html
@@ -94,8 +94,8 @@
 
 
  <!--Footer container-->
- <script src="/src/js/script.js"></script>
- <script src="/src/js/filtres.js"></script>
+ <script src="/js/script.js"></script>
+ <script src="/js/filtres.js"></script>
       
     </body>
     </html>
