--- a/src/wig.html
+++ b/src/wig.html
@@ -132,8 +132,8 @@
 
 
  <div id="footer"></div>
-    <script src="/src/js/script.js"></script>
-    <script src="/src/js/filtres.js"></script>
+    <script src="/js/script.js"></script>
+    <script src="/js/filtres.js"></script>
 </body>
 </html>
 
