--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <main>
     <!-- Main Image Banner -->
     <section class="w-full">
-      <img src="img/fond.webp" alt="Background Image" class="w-full h-1/4 object-cover">
+      <img src="img/fond.webp" alt="Background Image" class="w-full h-[600px] object-cover">
     </section>
 
     <!-- Section for Content -->
