--- a/src/article.html
+++ b/src/article.html
@@ -32,7 +32,7 @@
       document.querySelector('.article-image').src = imgSrc;
       document.querySelector('.article-image').alt = alt;
       document.querySelector('.article-title').textContent = alt;
-      document.querySelector('.article-price').textContent = price + '€';
+      document.querySelector('.article-price').textContent = price ;
     });
   </script>
 </body>
