--- a/src/wig.html
+++ b/src/wig.html
@@ -1,144 +1,162 @@
-<!-- wig.html -->
 <!doctype html>
-<html>
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="./output.css" rel="stylesheet">
-  <title>Wig</title>
+  <title>Collection de Perruques</title>
 </head>
 <body class="bg-gray-800">
   <div id="header"></div>
   <section class="h-[70px]"></section>
-<main class="flex">
-  
-  <!-- Section de filtrage -->
-  <aside class=" w-1/4 bg-gray-600 p-4 border-r border-gray-500">
-    <h2 class="text-xl font-semibold mb-4 text-white">Filtrer par couleur</h2>
-    <ul class="space-y-2">
-      <li>
-        <label class="flex items-center space-x-2  text-white">
-          <input type="checkbox" class="text-pink-500 focus:ring-pink-300" value="pink">
-          <span>Rose</span>
-        </label>
-      </li>
-      <li>
-        <label class="flex items-center space-x-2  text-white">
-          <input type="checkbox" class="text-blue-500 focus:ring-blue-300" value="blue">
-          <span>Bleu</span>
-        </label>
-      </li>
-      <li>
-        <label class="flex items-center space-x-2  text-white">
-          <input type="checkbox" class="text-red-500 focus:ring-red-300" value="red">
-          <span>Rouge</span>
-        </label>
-      </li>
-      <li>
-        <label class="flex items-center space-x-2  text-white">
-          <input type="checkbox" class="text-green-500 focus:ring-green-300" value="green">
-          <span>Vert</span>
-        </label>
-      </li>
-      <li>
-        <label class="flex items-center space-x-2  text-white">
-          <input type="checkbox" class="text-green-500 focus:ring-green-300" value="black">
-          <span>Noir</span>
-        </label>
-      </li>
-      <li>
-        <label class="flex items-center space-x-2  text-white">
-          <input type="checkbox" class="text-green-500 focus:ring-green-300" value="blonde">
-          <span>Blonde</span>
-        </label>
-      </li>
-      <li>
-        <label class="flex items-center space-x-2  text-white">
-          <input type="checkbox" class="text-green-500 focus:ring-green-300" value="orange">
-          <span>Orange</span>
-        </label>
-      </li>
-      <li>
-        <label class="flex items-center space-x-2  text-white">
-          <input type="checkbox" class="text-green-500 focus:ring-green-300" value="mauve">
-          <span>Mauve</span>
-        </label>
-      </li>
 
-    </ul>
-   
-  </aside>
+  <main class="flex">
+     <!-- Section de filtrage -->
+     <aside class="w-1/4 bg-gray-600 p-4 border-r border-gray-500">
+      <h2 class="text-xl font-semibold mb-4 text-white">Filtrer par couleur</h2>
+      <ul class="space-y-2">
+        <!-- Boucle pour éviter la répétition -->
+        <li>
+          <label class="flex items-center space-x-2 text-white">
+            <input type="checkbox" class="filter-checkbox" value="black">
+            <span>Noir</span>
+          </label>
+        </li>
+        <li>
+          <label class="flex items-center space-x-2 text-white">
+            <input type="checkbox" class="filter-checkbox" value="blonde">
+            <span>Blonde</span>
+          </label>
+        </li>
+        <li>
+          <label class="flex items-center space-x-2 text-white">
+            <input type="checkbox" class="filter-checkbox" value="pink">
+            <span>Rose</span>
+          </label>
+        </li>
+        <li>
+          <label class="flex items-center space-x-2 text-white">
+            <input type="checkbox" class="filter-checkbox" value="blue">
+            <span>Bleu</span>
+          </label>
+        </li>
+        <li>
+          <label class="flex items-center space-x-2 text-white">
+            <input type="checkbox" class="filter-checkbox" value="orange">
+            <span>Orange</span>
+          </label>
+        </li>
+        <li>
+          <label class="flex items-center space-x-2 text-white">
+            <input type="checkbox" class="filter-checkbox" value="mauve">
+            <span>Mauve</span>
+          </label>
+        </li>
+      </ul>
+    </aside>
+    <section class="w-full p-4">
+      <h1 class="text-3xl font-bold text-white mb-4 text-center">Collection de Perruques</h1>
+      <div id="items-container" class="grid grid-cols-3 gap-4">
+        <!-- Exemple d'article -->
+        <div class="item black">
+          <img 
+            src="img/wig/wig-black-traisse.webp" 
+            alt="Perruque noire tressée" 
+            class="w-full article-image cursor-pointer"
+            data-title="Perruque noire tressée"
+            data-price="12.00€"
+            data-description="Une magnifique perruque noire tressée, parfaite pour toutes les occasions."
+            onclick="redirectToArticle(this)"
+          >
+          <p class="text-white text-xl">Prix : 12€</p>
+        </div>
+        <div class="item blonde">
+          <img 
+            src="img/wig/wig-blonde-court.webp" 
+            alt="Perruque blonde courte" 
+            class="w-full article-image cursor-pointer"
+            data-title="Perruque blonde courte"
+            data-price="8.00€"
+            data-description="Une perruque blonde élégante et pratique pour un look rafraîchissant."
+            onclick="redirectToArticle(this)"
+          >
+          <p class="text-white text-xl">Prix : 8€</p>
+        </div>
+        <div class="item blue">
+          <img 
+            src="img/wig/wig-blue-1-tresse-longue.webp" 
+            alt="wig blue" 
+            class="w-full article-image cursor-pointer"
+            data-title="wig bleu"
+            data-price="35€"
+            data-description="Une perruque bleu tressée idéal pour faire Akane de Jinx."
+            onclick="redirectToArticle(this)"
+          >
+          <p class="text-white text-xl">Prix : 35€</p>
+          </div>
+          <div class="item pink">
+            <img 
+              src="img/wig/wig-pink-1.jpg" 
+              alt="perruqe rose" 
+              class="w-full article-image cursor-pointer"
+              data-title="perruque rose"
+              data-price="5€"
+              data-description="Une perruque ****."
+              onclick="redirectToArticle(this)"
+            >
+            <p class="text-white text-xl">Prix : 5€</p>
+            </div>
+            <div class="item ****">
+              <img 
+                src="img/wig/***" 
+                alt="***" 
+                class="w-full article-image cursor-pointer"
+                data-title="****"
+                data-price="***€"
+                data-description="Une perruque ****."
+                onclick="redirectToArticle(this)"
+              >
+              <p class="text-white text-xl">Prix : 8€</p>
+              </div>
+              <div class="item ****">
+                <img 
+                  src="img/wig/***" 
+                  alt="***" 
+                  class="w-full article-image cursor-pointer"
+                  data-title="****"
+                  data-price="***€"
+                  data-description="Une perruque ****."
+                  onclick="redirectToArticle(this)"
+                >
+                <p class="text-white text-xl">Prix : 8€</p>
+                </div>
+      </div>
+    </section>
+  </main>
 
-  <!-- Section des images -->
-  <section class="w-3/4 p-4">
-    <h1 class="text-3xl font-bold text-white mb-4 text-center">Collection de Perruques</h1>
-    <div class="grid grid-cols-3 gap-4">
-      <!-- Image 1 -->
-      <div class="item black">
-        <a href="article.html"><img src="img/wig/wig-black-traisse.webp" alt="Perruque noire tressée" 
-             class="w-full cursor-pointer" id="article-image"
-             data-price="12.00€" 
-             data-type="wig" 
-             onclick="redirectToArticle(this)">
-        </a>
-        <span class="text-white text-xl article-price"> Prix :12€</span>
-      </div>
-      <!-- Image 2 -->
-      <div class="item blonde">
-        <a href="article.html">
-        <img src="img/wig/wig-blonde-court.webp" alt="Perruque rose" class="w-full"
-        data-price="8.00€" 
-             data-sizes="M,L,XL" 
-             onclick="redirectToArticle(this)">
-      </a>
-      <p class="text-white text-xl"> Prix :8€</p>
-      </div>
-      <!-- Image 3 -->
-      <div class="item blue">
-        <img src="img/wig/wig-blue-1-tresse-longue.webp" alt="Perruque bleu" class="w-full">
-        <p class="text-white text-xl"> Prix :35€</p>
-      </div>
-      <!-- Image 4 -->
-      <div class="item pink">
-        <img src="img/wig/wig-pink-1.jpg" alt="Perruque rose" class="w-full">
-        <p class="text-white text-xl"> Prix :5€</p>
-      </div>
-      <!-- Image 5 -->
-      <div class="item orange">
-        <img src="img/wig/wig-orange-court.webp" alt="Perruque orange" class="w-full">
-        <p class="text-white text-xl"> Prix :8€</p>
-      </div>
-      <!-- Image 6 -->
-      <div class="item pink">
-        <img src="img/wig/wig-pink-court.jpg" alt="Perruque rose" class="w-full h-auto">
-        <p class="text-white text-xl"> Prix :10€</p>
-      </div>
-      <div class="item pink">
-        <img src="img/wig/wig-pink-longue.jpg" alt="Perruque rose" class="w-full  h-[453px] object-cover object-top">
-        <p class="text-white text-xl"> Prix :17€</p>
-      </div>
-      <div class="item blonde">
-        <img src="img/wig/wig-blonde-longue.webp" alt="Perruque rose" class="w-full">
-        <p class="text-white text-xl"> Prix :13€</p>
-      </div>
-      <div class="item mauve">
-        <img src="img/wig/wig-mauve-longue.jfif" alt="Perruque rose" class="w-full">
-        <p class="text-white text-xl"> Prix :15€</p>
-      </div>
-      
-    </div>
-  </section>
-</main>
+  <script>
+    // Fonction de redirection avec des paramètres dynamiques
+    function redirectToArticle(imageElement) {
+      const title = imageElement.getAttribute('data-title');
+      const price = imageElement.getAttribute('data-price');
+      const description = imageElement.getAttribute('data-description');
+      const imageSrc = imageElement.src;
 
+      // Construction de l'URL avec les paramètres
+      const params = new URLSearchParams({
+        title,
+        price,
+        description,
+        image: imageSrc,
+      });
 
- <div id="footer"></div>
-    <script src="/js/script.js"></script>
-    <script src="/js/filtres.js"></script>
+      // Rediriger vers la page article.html avec les paramètres
+      window.location.href = `article.html?${params.toString()}`;
+    }
+  </script>
+
+  <div id="footer"></div>
+  <script src="/js/script.js"></script>
+  <script src="/src/js/filtres.js"></script>
 </body>
 </html>
-
-
-
-
-  
- 
