--- a/src/article.html
+++ b/src/article.html
@@ -12,27 +12,39 @@
       <h1 class="text-3xl font-bold mb-4 text-center article-title">Article</h1>
       <div class="flex flex-col items-center">
         <!-- Image -->
-        <img src="" alt="Article" class="article-image w-1/2 mb-4 rounded-lg">
-        <!-- Prix -->
+        <span><img src="" alt="Article" class="article-image w-1/2 mb-4 rounded-lg">
+        
+          <!-- Prix -->
         <p class="text-2xl font-semibold mb-4">Prix : <span class="article-price"></span></p>
       </div>
     </div>
   </main>
   <script>
-    // Script pour extraire et afficher les informations depuis l'URL
     document.addEventListener("DOMContentLoaded", () => {
       const params = new URLSearchParams(window.location.search);
 
       // Récupération des paramètres
       const price = params.get('price') || 'Prix non spécifié';
-      const imgSrc = params.get('img') || '';
+      const imgSrc = params.get('img');
       const alt = params.get('alt') || 'Article';
 
-      // Mise à jour de la page
-      document.querySelector('.article-image').src = imgSrc;
-      document.querySelector('.article-image').alt = alt;
+      // Vérification et mise à jour de l'image
+      const articleImage = document.querySelector('.article-image');
+      if (imgSrc) {
+        articleImage.src = imgSrc;
+        articleImage.onerror = () => {
+          console.warn("Image introuvable, remplacement par une image par défaut.");
+          articleImage.src = ''; // Remplacez par le chemin d'une image par défaut
+        };
+      } else {
+        articleImage.src = 'default-image.jpg'; // Image par défaut si aucun paramètre img
+      }
+
+      articleImage.alt = alt;
+
+      // Mise à jour des autres éléments
       document.querySelector('.article-title').textContent = alt;
-      document.querySelector('.article-price').textContent = price ;
+      document.querySelector('.article-price').textContent = price;
     });
   </script>
 </body>
