--- a/src/wig.html
+++ b/src/wig.html
@@ -11,8 +11,8 @@
   <section class="h-[70px]"></section>
 
   <main class="flex">
-     <!-- Section de filtrage -->
-     <aside class="w-1/4 bg-gray-600 p-4 border-r border-gray-500">
+    <!-- Section de filtrage -->
+    <aside class="w-1/4 bg-gray-600 p-4 border-r border-gray-500">
       <h2 class="text-xl font-semibold mb-4 text-white">Filtrer par couleur</h2>
       <ul class="space-y-2">
         <!-- Boucle pour éviter la répétition -->
@@ -54,11 +54,14 @@
         </li>
       </ul>
     </aside>
+
+    <!-- Section des articles -->
     <section class="w-full p-4">
       <h1 class="text-3xl font-bold text-white mb-4 text-center">Collection de Perruques</h1>
       <div id="items-container" class="grid grid-cols-3 gap-4">
         <!-- Exemple d'article -->
         <div class="item black">
+          <!-- <h1 class="article-title">Wig noire tré </h1> -->
           <img 
             src="img/wig/wig-black-traisse.webp" 
             alt="Perruque noire tressée" 
@@ -85,51 +88,27 @@
         <div class="item blue">
           <img 
             src="img/wig/wig-blue-1-tresse-longue.webp" 
-            alt="wig blue" 
+            alt="Perruque bleue" 
             class="w-full article-image cursor-pointer"
-            data-title="wig bleu"
-            data-price="35€"
-            data-description="Une perruque bleu tressée idéal pour faire Akane de Jinx."
+            data-title="Perruque bleue tressée"
+            data-price="35.00€"
+            data-description="Une perruque bleue tressée idéale pour incarner un personnage audacieux."
             onclick="redirectToArticle(this)"
           >
           <p class="text-white text-xl">Prix : 35€</p>
-          </div>
-          <div class="item pink">
-            <img 
-              src="img/wig/wig-pink-1.jpg" 
-              alt="perruqe rose" 
-              class="w-full article-image cursor-pointer"
-              data-title="perruque rose"
-              data-price="5€"
-              data-description="Une perruque ****."
-              onclick="redirectToArticle(this)"
-            >
-            <p class="text-white text-xl">Prix : 5€</p>
-            </div>
-            <div class="item ****">
-              <img 
-                src="img/wig/***" 
-                alt="***" 
-                class="w-full article-image cursor-pointer"
-                data-title="****"
-                data-price="***€"
-                data-description="Une perruque ****."
-                onclick="redirectToArticle(this)"
-              >
-              <p class="text-white text-xl">Prix : 8€</p>
-              </div>
-              <div class="item ****">
-                <img 
-                  src="img/wig/***" 
-                  alt="***" 
-                  class="w-full article-image cursor-pointer"
-                  data-title="****"
-                  data-price="***€"
-                  data-description="Une perruque ****."
-                  onclick="redirectToArticle(this)"
-                >
-                <p class="text-white text-xl">Prix : 8€</p>
-                </div>
+        </div>
+        <div class="item pink">
+          <img 
+            src="img/wig/wig-pink-1.jpg" 
+            alt="Perruque rose" 
+            class="w-full article-image cursor-pointer"
+            data-title="Perruque rose"
+            data-price="5.00€"
+            data-description="Une perruque rose lumineuse pour un style audacieux."
+            onclick="redirectToArticle(this)"
+          >
+          <p class="text-white text-xl">Prix : 5€</p>
+        </div>
       </div>
     </section>
   </main>
@@ -147,10 +126,10 @@
         title,
         price,
         description,
-        image: imageSrc,
+        img: imageSrc, // Notez l'utilisation de "img" pour cohérence
       });
 
-      // Rediriger vers la page article.html avec les paramètres
+      // Redirection vers la page dynamique "article.html"
       window.location.href = `article.html?${params.toString()}`;
     }
   </script>
