--- a/src/wig.html
+++ b/src/wig.html
@@ -73,7 +73,7 @@
           >
           <p class="text-white text-xl">Prix : 12€</p>
         </div>
-        <div class="item blonde">
+        <div class="item blonde">c
           <img 
             src="img/wig/wig-blonde-court.webp" 
             alt="Perruque blonde courte" 
