--- a/src/wig.html
+++ b/src/wig.html
@@ -65,18 +65,17 @@
       <!-- Items Container (Grid for Products) -->
       <div id="items-container" class="grid grid-cols-3 gap-4">
         <!-- Article 1 (Black Wig) -->
-        <div class="item black">
+        <div class="item blonde">
           <img 
-          src="img/wig/wig-blonde-court.webp"
-            
-            alt="Perruque noire tressée" 
+            src="img/wig/wig-blonde-court.webp" 
+            alt="Perruque blonde courte" 
             class="w-full article-image cursor-pointer"
-            data-title="Perruque noire tressée"
-            data-price="12.00€"
-            data-description="Une magnifique perruque noire tressée, parfaite pour toutes les occasions."
+            data-title="Perruque blonde courte"
+            data-price="8.00€"
+            data-description="Une perruque blonde élégante et pratique pour un look rafraîchissant."
             onclick="redirectToArticle(this)"
           >
-          <p class="text-white text-xl">Prix : 12€</p>
+          <p class="text-white text-xl">Prix : 8€</p>
         </div>
 
         <!-- Article 2 (Blonde Wig) -->
