--- a/src/wig.html
+++ b/src/wig.html
@@ -65,17 +65,18 @@
       <!-- Items Container (Grid for Products) -->
       <div id="items-container" class="grid grid-cols-3 gap-4">
         <!-- Article 1 (Black Wig) -->
-        <div class="item blonde">
+        <div class="item black">
           <img 
-            src="img/wig/wig-blonde-court.webp" 
-            alt="Perruque blonde courte" 
+          
+            src="wig/wig-black-traisse.webp" 
+            alt="Perruque noire tressée" 
             class="w-full article-image cursor-pointer"
-            data-title="Perruque blonde courte"
-            data-price="8.00€"
-            data-description="Une perruque blonde élégante et pratique pour un look rafraîchissant."
+            data-title="Perruque noire tressée"
+            data-price="12.00€"
+            data-description="Une magnifique perruque noire tressée, parfaite pour toutes les occasions."
             onclick="redirectToArticle(this)"
           >
-          <p class="text-white text-xl">Prix : 8€</p>
+          <p class="text-white text-xl">Prix : 12€</p>
         </div>
 
         <!-- Article 2 (Blonde Wig) -->
@@ -150,6 +151,6 @@
 
   <!-- External JavaScript Files -->
   <script src="/js/script.js"></script>
-  <script src="/src/js/filtres.js"></script>
+  <script src="/js/filtres.js"></script>
 </body>
 </html>
