--- a/src/wig.html
+++ b/src/wig.html
@@ -68,7 +68,7 @@
         <div class="item black">
           <img 
           
-            src="wig/wig-black-traisse.webp" 
+            src="img/wig/wig-black-traisse.webp" 
             alt="Perruque noire tressée" 
             class="w-full article-image cursor-pointer"
             data-title="Perruque noire tressée"
