--- a/src/article.html
+++ b/src/article.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="./output.css" rel="stylesheet">
-  <title>Article</title>
+  <title>article</title>
 </head>
 <body class="bg-gray-800 text-white">
   <main class="p-8">
