--- a/src/accessoir.html
+++ b/src/accessoir.html
@@ -105,16 +105,16 @@
           <p class="text-white text-xl">Prix : 10€</p>
         </div>
         <div class="item Autres">
-          <img src="img/accessoire/acce (4).jpg" 
-          alt="Éspaule plumes" 
-          class="sw-full h-[540px] cursor-pointer"
-          data-title="Epaule en plumes"
+          <img id="seconde-peau" src="img/accessoire/acce (4).jpg" 
+          alt="Seconde Peau Noir" 
+          class="w-full cursor-pointer h-[540px]"
+          data-title="Epaule plumes"
           data-price="15€"
-          data-description="Epaule en plumes ideal pour le cosplay de demon."
-          onclick="redirectToArticsle(this)"
+          data-description="idéal pour coplayer de peronnage telle que un simpson sans devoir peintre tout son corps"
+          onclick="redirectToArticle(this)"
           >
-          <ps class="text-white text-xl">Prix : 15€</p>
-        </divs>
+          <p class="text-white text-xl">Prix : 15€</p>
+        </div>
         
       </div>
 
