--- a/src/article.html
+++ b/src/article.html
@@ -46,10 +46,10 @@
         articleImage.src = imgSrc;
         articleImage.onerror = () => {
           console.warn("Image introuvable, remplacement par une image par défaut.");
-          articleImage.src = ''; // Remplacez par une image par défaut
+          articleImage.src = '/src/img/default-image.jpg'; // Remplacez par une image par défaut
         };
       } else {
-        articleImage.src = '/src/img/default-image.jpg'; // Image par défaut
+        articleImage.src = ''; // Image par défaut
       }
 
       articleImage.alt = alt;
